omega/parser.output
   0  $accept : %entry% $end

   1  input :
   2        | input block

   3  block : Command
   4        | block SEMI Command
   5        | block DSEMI
   6        | block EOF

   7  toplevel : EOF
   8           | Command SEMI toplevel

   9  Command : Term
  10          | LCID Binder
  11          | UCID TyBinder

  12  Binder : COLON Ty

  13  TyBinder : COLONCOLON Kn
  14           | TyAbbArgs EQ Ty

  15  TyAbbArgs :
  16            | UCID BindKn TyAbbArgs

  17  BindKn :
  18         | COLONCOLON Kn

  19  Kn : ArrowKn

  20  ArrowKn : AKn
  21          | AKn DARROW AKn

  22  AKn : STAR
  23      | LPAREN Kn RPAREN

  24  Ty : ArrowTy
  25     | LAMBDA UCID BindKn DOT Ty
  26     | ArrowTy

  27  ArrowTy : ATy ARROW ArrowTy
  28          | AppTy

  29  AppTy : AppTy ATy
  30        | ATy

  31  ATy : UCID
  32      | LPAREN Ty RPAREN
  33      | BOOL
  34      | NAT

  35  Term : AppTerm
  36       | LAMBDA LCID COLON Ty DOT Term
  37       | IF Term THEN Term ELSE Term

  38  AppTerm : ATerm
  39          | SUCC ATerm
  40          | PRED ATerm
  41          | ISZERO ATerm
  42          | AppTerm ATerm

  43  ATerm : LPAREN Term RPAREN
  44        | LCID
  45        | TRUE
  46        | FALSE
  47        | INTV

  48  %entry% : '\001' toplevel
  49          | '\002' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . toplevel  (48)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	UCID  shift 11
	LCID  shift 12
	INTV  shift 13
	LPAREN  shift 14
	EOF  shift 15
	.  error

	toplevel  goto 16
	Command  goto 17
	Term  goto 18
	AppTerm  goto 19
	ATerm  goto 20


state 2
	%entry% : '\002' . input  (49)
	input : .  (1)

	.  reduce 1

	input  goto 21


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	Term : LAMBDA . LCID COLON Ty DOT Term  (36)

	LCID  shift 22
	.  error


state 5
	Term : IF . Term THEN Term ELSE Term  (37)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 23
	INTV  shift 13
	LPAREN  shift 14
	.  error

	Term  goto 24
	AppTerm  goto 19
	ATerm  goto 20


state 6
	ATerm : TRUE .  (45)

	.  reduce 45


state 7
	ATerm : FALSE .  (46)

	.  reduce 46


state 8
	AppTerm : SUCC . ATerm  (39)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 23
	INTV  shift 13
	LPAREN  shift 14
	.  error

	ATerm  goto 25


state 9
	AppTerm : PRED . ATerm  (40)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 23
	INTV  shift 13
	LPAREN  shift 14
	.  error

	ATerm  goto 26


state 10
	AppTerm : ISZERO . ATerm  (41)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 23
	INTV  shift 13
	LPAREN  shift 14
	.  error

	ATerm  goto 27


state 11
	Command : UCID . TyBinder  (11)
	TyAbbArgs : .  (15)

	UCID  shift 28
	COLONCOLON  shift 29
	EQ  reduce 15

	TyBinder  goto 30
	TyAbbArgs  goto 31


state 12
	Command : LCID . Binder  (10)
	ATerm : LCID .  (44)

	COLON  shift 32
	$end  reduce 44
	LAMBDA  reduce 44
	IF  reduce 44
	TRUE  reduce 44
	FALSE  reduce 44
	SUCC  reduce 44
	PRED  reduce 44
	ISZERO  reduce 44
	UCID  reduce 44
	LCID  reduce 44
	INTV  reduce 44
	LPAREN  reduce 44
	SEMI  reduce 44
	DSEMI  reduce 44
	EOF  reduce 44

	Binder  goto 33


state 13
	ATerm : INTV .  (47)

	.  reduce 47


state 14
	ATerm : LPAREN . Term RPAREN  (43)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 23
	INTV  shift 13
	LPAREN  shift 14
	.  error

	Term  goto 34
	AppTerm  goto 19
	ATerm  goto 20


state 15
	toplevel : EOF .  (7)

	.  reduce 7


state 16
	%entry% : '\001' toplevel .  (48)

	.  reduce 48


state 17
	toplevel : Command . SEMI toplevel  (8)

	SEMI  shift 35
	.  error


state 18
	Command : Term .  (9)

	.  reduce 9


19: shift/reduce conflict (shift 6, reduce 35) on TRUE
19: shift/reduce conflict (shift 7, reduce 35) on FALSE
19: shift/reduce conflict (shift 23, reduce 35) on LCID
19: shift/reduce conflict (shift 13, reduce 35) on INTV
19: shift/reduce conflict (shift 14, reduce 35) on LPAREN
state 19
	Term : AppTerm .  (35)
	AppTerm : AppTerm . ATerm  (42)

	TRUE  shift 6
	FALSE  shift 7
	LCID  shift 23
	INTV  shift 13
	LPAREN  shift 14
	$end  reduce 35
	LAMBDA  reduce 35
	IF  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	SUCC  reduce 35
	PRED  reduce 35
	ISZERO  reduce 35
	UCID  reduce 35
	RPAREN  reduce 35
	SEMI  reduce 35
	DSEMI  reduce 35
	EOF  reduce 35

	ATerm  goto 36


state 20
	AppTerm : ATerm .  (38)

	.  reduce 38


state 21
	input : input . block  (2)
	%entry% : '\002' input .  (49)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	UCID  shift 11
	LCID  shift 12
	INTV  shift 13
	LPAREN  shift 14
	$end  reduce 49

	block  goto 37
	Command  goto 38
	Term  goto 18
	AppTerm  goto 19
	ATerm  goto 20


state 22
	Term : LAMBDA LCID . COLON Ty DOT Term  (36)

	COLON  shift 39
	.  error


state 23
	ATerm : LCID .  (44)

	.  reduce 44


state 24
	Term : IF Term . THEN Term ELSE Term  (37)

	THEN  shift 40
	.  error


state 25
	AppTerm : SUCC ATerm .  (39)

	.  reduce 39


state 26
	AppTerm : PRED ATerm .  (40)

	.  reduce 40


state 27
	AppTerm : ISZERO ATerm .  (41)

	.  reduce 41


state 28
	TyAbbArgs : UCID . BindKn TyAbbArgs  (16)
	BindKn : .  (17)

	COLONCOLON  shift 41
	UCID  reduce 17
	EQ  reduce 17

	BindKn  goto 42


state 29
	TyBinder : COLONCOLON . Kn  (13)

	STAR  shift 43
	LPAREN  shift 44
	.  error

	Kn  goto 45
	ArrowKn  goto 46
	AKn  goto 47


state 30
	Command : UCID TyBinder .  (11)

	.  reduce 11


state 31
	TyBinder : TyAbbArgs . EQ Ty  (14)

	EQ  shift 48
	.  error


state 32
	Binder : COLON . Ty  (12)

	BOOL  shift 49
	NAT  shift 50
	LAMBDA  shift 51
	UCID  shift 52
	LPAREN  shift 53
	.  error

	Ty  goto 54
	ArrowTy  goto 55
	ATy  goto 56
	AppTy  goto 57


state 33
	Command : LCID Binder .  (10)

	.  reduce 10


state 34
	ATerm : LPAREN Term . RPAREN  (43)

	RPAREN  shift 58
	.  error


state 35
	toplevel : Command SEMI . toplevel  (8)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	UCID  shift 11
	LCID  shift 12
	INTV  shift 13
	LPAREN  shift 14
	EOF  shift 15
	.  error

	toplevel  goto 59
	Command  goto 17
	Term  goto 18
	AppTerm  goto 19
	ATerm  goto 20


state 36
	AppTerm : AppTerm ATerm .  (42)

	.  reduce 42


state 37
	input : input block .  (2)
	block : block . SEMI Command  (4)
	block : block . DSEMI  (5)
	block : block . EOF  (6)

	SEMI  shift 60
	DSEMI  shift 61
	EOF  shift 62
	$end  reduce 2
	LAMBDA  reduce 2
	IF  reduce 2
	TRUE  reduce 2
	FALSE  reduce 2
	SUCC  reduce 2
	PRED  reduce 2
	ISZERO  reduce 2
	UCID  reduce 2
	LCID  reduce 2
	INTV  reduce 2
	LPAREN  reduce 2


state 38
	block : Command .  (3)

	.  reduce 3


state 39
	Term : LAMBDA LCID COLON . Ty DOT Term  (36)

	BOOL  shift 49
	NAT  shift 50
	LAMBDA  shift 51
	UCID  shift 52
	LPAREN  shift 53
	.  error

	Ty  goto 63
	ArrowTy  goto 55
	ATy  goto 56
	AppTy  goto 57


state 40
	Term : IF Term THEN . Term ELSE Term  (37)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 23
	INTV  shift 13
	LPAREN  shift 14
	.  error

	Term  goto 64
	AppTerm  goto 19
	ATerm  goto 20


state 41
	BindKn : COLONCOLON . Kn  (18)

	STAR  shift 43
	LPAREN  shift 44
	.  error

	Kn  goto 65
	ArrowKn  goto 46
	AKn  goto 47


state 42
	TyAbbArgs : UCID BindKn . TyAbbArgs  (16)
	TyAbbArgs : .  (15)

	UCID  shift 28
	EQ  reduce 15

	TyAbbArgs  goto 66


state 43
	AKn : STAR .  (22)

	.  reduce 22


state 44
	AKn : LPAREN . Kn RPAREN  (23)

	STAR  shift 43
	LPAREN  shift 44
	.  error

	Kn  goto 67
	ArrowKn  goto 46
	AKn  goto 47


state 45
	TyBinder : COLONCOLON Kn .  (13)

	.  reduce 13


state 46
	Kn : ArrowKn .  (19)

	.  reduce 19


state 47
	ArrowKn : AKn .  (20)
	ArrowKn : AKn . DARROW AKn  (21)

	DARROW  shift 68
	$end  reduce 20
	LAMBDA  reduce 20
	IF  reduce 20
	TRUE  reduce 20
	FALSE  reduce 20
	SUCC  reduce 20
	PRED  reduce 20
	ISZERO  reduce 20
	UCID  reduce 20
	LCID  reduce 20
	INTV  reduce 20
	LPAREN  reduce 20
	RPAREN  reduce 20
	SEMI  reduce 20
	DSEMI  reduce 20
	EQ  reduce 20
	DOT  reduce 20
	EOF  reduce 20


state 48
	TyBinder : TyAbbArgs EQ . Ty  (14)

	BOOL  shift 49
	NAT  shift 50
	LAMBDA  shift 51
	UCID  shift 52
	LPAREN  shift 53
	.  error

	Ty  goto 69
	ArrowTy  goto 55
	ATy  goto 56
	AppTy  goto 57


state 49
	ATy : BOOL .  (33)

	.  reduce 33


state 50
	ATy : NAT .  (34)

	.  reduce 34


state 51
	Ty : LAMBDA . UCID BindKn DOT Ty  (25)

	UCID  shift 70
	.  error


state 52
	ATy : UCID .  (31)

	.  reduce 31


state 53
	ATy : LPAREN . Ty RPAREN  (32)

	BOOL  shift 49
	NAT  shift 50
	LAMBDA  shift 51
	UCID  shift 52
	LPAREN  shift 53
	.  error

	Ty  goto 71
	ArrowTy  goto 55
	ATy  goto 56
	AppTy  goto 57


state 54
	Binder : COLON Ty .  (12)

	.  reduce 12


55: reduce/reduce conflict (reduce 24, reduce 26) on $end
55: reduce/reduce conflict (reduce 24, reduce 26) on LAMBDA
55: reduce/reduce conflict (reduce 24, reduce 26) on IF
55: reduce/reduce conflict (reduce 24, reduce 26) on TRUE
55: reduce/reduce conflict (reduce 24, reduce 26) on FALSE
55: reduce/reduce conflict (reduce 24, reduce 26) on SUCC
55: reduce/reduce conflict (reduce 24, reduce 26) on PRED
55: reduce/reduce conflict (reduce 24, reduce 26) on ISZERO
55: reduce/reduce conflict (reduce 24, reduce 26) on UCID
55: reduce/reduce conflict (reduce 24, reduce 26) on LCID
55: reduce/reduce conflict (reduce 24, reduce 26) on INTV
55: reduce/reduce conflict (reduce 24, reduce 26) on LPAREN
55: reduce/reduce conflict (reduce 24, reduce 26) on RPAREN
55: reduce/reduce conflict (reduce 24, reduce 26) on SEMI
55: reduce/reduce conflict (reduce 24, reduce 26) on DSEMI
55: reduce/reduce conflict (reduce 24, reduce 26) on DOT
55: reduce/reduce conflict (reduce 24, reduce 26) on EOF
state 55
	Ty : ArrowTy .  (24)
	Ty : ArrowTy .  (26)

	.  reduce 24


state 56
	ArrowTy : ATy . ARROW ArrowTy  (27)
	AppTy : ATy .  (30)

	ARROW  shift 72
	$end  reduce 30
	BOOL  reduce 30
	NAT  reduce 30
	LAMBDA  reduce 30
	IF  reduce 30
	TRUE  reduce 30
	FALSE  reduce 30
	SUCC  reduce 30
	PRED  reduce 30
	ISZERO  reduce 30
	UCID  reduce 30
	LCID  reduce 30
	INTV  reduce 30
	LPAREN  reduce 30
	RPAREN  reduce 30
	SEMI  reduce 30
	DSEMI  reduce 30
	DOT  reduce 30
	EOF  reduce 30


57: shift/reduce conflict (shift 52, reduce 28) on UCID
57: shift/reduce conflict (shift 53, reduce 28) on LPAREN
state 57
	ArrowTy : AppTy .  (28)
	AppTy : AppTy . ATy  (29)

	BOOL  shift 49
	NAT  shift 50
	UCID  shift 52
	LPAREN  shift 53
	$end  reduce 28
	LAMBDA  reduce 28
	IF  reduce 28
	TRUE  reduce 28
	FALSE  reduce 28
	SUCC  reduce 28
	PRED  reduce 28
	ISZERO  reduce 28
	LCID  reduce 28
	INTV  reduce 28
	RPAREN  reduce 28
	SEMI  reduce 28
	DSEMI  reduce 28
	DOT  reduce 28
	EOF  reduce 28

	ATy  goto 73


state 58
	ATerm : LPAREN Term RPAREN .  (43)

	.  reduce 43


state 59
	toplevel : Command SEMI toplevel .  (8)

	.  reduce 8


state 60
	block : block SEMI . Command  (4)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	UCID  shift 11
	LCID  shift 12
	INTV  shift 13
	LPAREN  shift 14
	.  error

	Command  goto 74
	Term  goto 18
	AppTerm  goto 19
	ATerm  goto 20


state 61
	block : block DSEMI .  (5)

	.  reduce 5


state 62
	block : block EOF .  (6)

	.  reduce 6


state 63
	Term : LAMBDA LCID COLON Ty . DOT Term  (36)

	DOT  shift 75
	.  error


state 64
	Term : IF Term THEN Term . ELSE Term  (37)

	ELSE  shift 76
	.  error


state 65
	BindKn : COLONCOLON Kn .  (18)

	.  reduce 18


state 66
	TyAbbArgs : UCID BindKn TyAbbArgs .  (16)

	.  reduce 16


state 67
	AKn : LPAREN Kn . RPAREN  (23)

	RPAREN  shift 77
	.  error


state 68
	ArrowKn : AKn DARROW . AKn  (21)

	STAR  shift 43
	LPAREN  shift 44
	.  error

	AKn  goto 78


state 69
	TyBinder : TyAbbArgs EQ Ty .  (14)

	.  reduce 14


state 70
	Ty : LAMBDA UCID . BindKn DOT Ty  (25)
	BindKn : .  (17)

	COLONCOLON  shift 41
	DOT  reduce 17

	BindKn  goto 79


state 71
	ATy : LPAREN Ty . RPAREN  (32)

	RPAREN  shift 80
	.  error


state 72
	ArrowTy : ATy ARROW . ArrowTy  (27)

	BOOL  shift 49
	NAT  shift 50
	UCID  shift 52
	LPAREN  shift 53
	.  error

	ArrowTy  goto 81
	ATy  goto 56
	AppTy  goto 57


state 73
	AppTy : AppTy ATy .  (29)

	.  reduce 29


state 74
	block : block SEMI Command .  (4)

	.  reduce 4


state 75
	Term : LAMBDA LCID COLON Ty DOT . Term  (36)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 23
	INTV  shift 13
	LPAREN  shift 14
	.  error

	Term  goto 82
	AppTerm  goto 19
	ATerm  goto 20


state 76
	Term : IF Term THEN Term ELSE . Term  (37)

	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	SUCC  shift 8
	PRED  shift 9
	ISZERO  shift 10
	LCID  shift 23
	INTV  shift 13
	LPAREN  shift 14
	.  error

	Term  goto 83
	AppTerm  goto 19
	ATerm  goto 20


state 77
	AKn : LPAREN Kn RPAREN .  (23)

	.  reduce 23


state 78
	ArrowKn : AKn DARROW AKn .  (21)

	.  reduce 21


state 79
	Ty : LAMBDA UCID BindKn . DOT Ty  (25)

	DOT  shift 84
	.  error


state 80
	ATy : LPAREN Ty RPAREN .  (32)

	.  reduce 32


state 81
	ArrowTy : ATy ARROW ArrowTy .  (27)

	.  reduce 27


state 82
	Term : LAMBDA LCID COLON Ty DOT Term .  (36)

	.  reduce 36


state 83
	Term : IF Term THEN Term ELSE Term .  (37)

	.  reduce 37


state 84
	Ty : LAMBDA UCID BindKn DOT . Ty  (25)

	BOOL  shift 49
	NAT  shift 50
	LAMBDA  shift 51
	UCID  shift 52
	LPAREN  shift 53
	.  error

	Ty  goto 85
	ArrowTy  goto 55
	ATy  goto 56
	AppTy  goto 57


state 85
	Ty : LAMBDA UCID BindKn DOT Ty .  (25)

	.  reduce 25


Rules never reduced:
	Ty : ArrowTy  (26)


State 19 contains 5 shift/reduce conflicts.
State 55 contains 17 reduce/reduce conflicts.
State 57 contains 2 shift/reduce conflicts.


58 terminals, 20 nonterminals
50 grammar rules, 86 states
